tests/ui/issues/issue-2281-part1.stderr
error[E0425]: cannot find value `foobar` in this scope
  --> $DIR/issue-2281-part1.rs:1:28
   |
LL | fn main() { println!("{}", foobar); }
   |                            ^^^^^^ not found in this scope

error: aborting due to previous error

For more information about this error, try `rustc --explain E0425`.
