tests/ui/issues/issue-2281-part1.rs
fn main() { println!("{}", foobar); } //~ ERROR cannot find value `foobar` in this scope
